samples/_failures_safe/1761305127_0a6277_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54ec2d46.c:157: error: expected ‘;’, ‘,’ or ‘)’ at end of input
